--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ font-family: 'Courgette', cursive;
 }
 
 body {
-    max-width: 100%;
+    max-width: 1920px;
     margin: auto;
     background-image: url(../img/background-image.jpg);
     background-size: cover;
@@ -19,15 +19,13 @@ body {
         display: flex;
     }
 }
-
-.header-logo img {
+.header-logo {
     width: 90%;
-    text-align: center;
     margin: 0.5rem;
-
-.header-nav {
+    
+.header-nav  {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
@@ -42,18 +40,18 @@ body {
     font-size: 2.4rem;
     text-decoration: none;
     color: white;
-    padding: 0 1 %;
+
 }
 
-@media (min-width 500px) {
+@media (min-width: 500px) {
     .header-nav a:last-child {
         margin-left: auto;
     }
-}
 
 .header-nav a:hover {
     text-decoration: none;
 }
+
 
 .banner {
     min-height: 30vh;
@@ -110,23 +108,25 @@ body {
      }   
 }
 
-@media (min-width: 400px) {
+@media (min-width: 600px) {
      .assortment {
          display: grid;
-         grid-template-columns: repeat(2fr 1fr;
+         grid-template-columns: repeat (2fr 1fr);
      }   
 }
 
-@media (min-width: 400px) {
+@media (min-width: 800px) {
      .assortment {
          display: grid;
-         grid-template-columns: repeat(4fr 1fr;
+         grid-template-columns: repeat (4fr 1fr);
      }   
 }
+
 footer {
     display: flex;
-    align-items: center;
     justify-content: space-around;
+    align-items: center;
+    width: 100%;
     background-color: #444444;
     font-size: 18px;
     margin-top: 10px;
@@ -136,9 +136,6 @@ footer {
     margin-left: 35px;
 }
 
-.icon {
-     width: 64px;
-     height: 64px;
-}
+
 
 
