--- a/css/index.css
+++ b/css/index.css
@@ -1,141 +1,177 @@
-@import url('https://fonts.googleapis.com/css?family=Courgette');
+@import url('https://fonts.googleapis.com/css?family=Archivo+Black|Kaushan+Script');
 
 :root {
-font-family: 'Courgette', cursive;
+font-family: 'Kaushan Script', cursive;
 }
-
 body {
-    max-width: 1920px;
+    max-width: 100%;
     margin: auto;
-    background-image: url(../img/background-image.jpg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    color: #A95F2D;
 }
-
 @media (min-width: 500px) {
     header > nav {
         display: flex;
     }
 }
-.header-logo {
-    width: 90%;
-    margin: 0.5rem;
-    
-.header-nav  {
-    display: flex;
+header {
+    background-color: black;
+    margin: 0;
+}
+.language {
+    float: right;
+    padding-right: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     justify-content: space-around;
     flex-wrap: wrap;
 }
-
 @media (min-width: 500px) {
-    .header-nav {
+    .language {
         align-items: center;
         flex: 1;
     }
 }
 
-.header-nav a {
-    font-size: 2.4rem;
+.language a {
     text-decoration: none;
-    color: white;
-
+    color: #FDBB1E;
+    font-size: 1.1rem;
+    padding: 10px;
+}
+.language a:hover {
+    text-decoration: underline;
+}
+.logo img {
+    padding: 2px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.slogan {
+    margin: 0;
+    padding-top: 50px;
+    padding-bottom: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #FDBB1E;
+    font-size: 1.3rem;
+    text-align: center;
+}
+.navigation {
+    background-color: black;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    text-shadow: 0 0 10px #fff,
+}
+@media (min-width: 500px) {
+    .navigation {
+        align-items: center;
+        flex: 1;
+    }
+}
+.navigation a {
+    font-family: 'Archivo Black', sans-serif;
+    text-decoration: none;
+    color: #FDBB1E;
+    font-size: 1.6rem;
+    padding: 20px;
 }
 
 @media (min-width: 500px) {
-    .header-nav a:last-child {
+    .navigation a:last-child {
         margin-left: auto;
     }
-
-.header-nav a:hover {
-    text-decoration: none;
 }
-
-
-.banner {
-    min-height: 30vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.main_content {
+    background-image: url(../img/backgroundaa.jpg);
 }
-
-.banner {
-    display: flex;
-    align-items:center;
-    justify-content: center;
-}
-.content {
-    padding-top: 115px;
-    color: #E6C66F;
-    font-size: 2rem;
+.wellcometext {
+    margin: 0;
+    padding:40px;
+    font-size: 1.8rem;
     text-align: center;
 }
-
-.about_us {
+.text {
+    margin: 0;
+    padding-bottom: 60px;
+}
+.map {
+    margin:0;
+    padding: 10px;
+    padding-top: 0;
+}
+.headers {
+    text-align: center;
+    font-size: 2.5rem;
+}
+.assortment {
+    border-bottom-color: 1px solid black;
+    margin-bottom: 5px;
+    padding-bottom: 25px;
     text-align: center;
 }
-.tittle {
-    margin: 3rem;
-    text-align: center;
-    color: #F0ECDF;
-}
-
 .food {
-    border: 1px solid black;
-    margin: 5px;
-    padding: 5px;
+    padding: 10px;
 }
-
-.food img {
+.assortment img {
     display: block;
     width: 100%;
 }
-
-.food .button-container {
-    display: flex;
-    justify-content: space-around;
-}
-
-.food .button-container button {
-    min-width: 70px;
-}
- 
 @media (min-width: 400px) {
-     .assortment {
-         display: grid;
-         grid-template-columns: 1fr 1fr;
-     }   
+    .assortment {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
-@media (min-width: 600px) {
-     .assortment {
-         display: grid;
-         grid-template-columns: repeat (2fr 1fr);
-     }   
+@media (min-width: 500px) {
+    .assortment {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
-@media (min-width: 800px) {
-     .assortment {
-         display: grid;
-         grid-template-columns: repeat (4fr 1fr);
-     }   
+@media (min-width: 880px) {
+    .assortment {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+@media (min-width: 1000px) {
+    .assortment {
+        grid-template-columns: repeat(6, 1fr);
+    }
 }
 
+@media (min-width: 500px) {
+    footer > nav {
+        display: flex;
+    }
+}
 footer {
-    display: flex;
+    background-color: black;
+    margin-bottom: 0;
+}
+.infofooter {
+    padding-right: 20px;
+    padding-top: 0;
+    padding-bottom: 5px;
     justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    background-color: #444444;
-    font-size: 18px;
-    margin-top: 10px;
+    flex-wrap: wrap;
+    color:#FDBB1E;
 }
-
+@media (min-width: 500px) {
+    .language {
+        align-items: center;
+        flex: 1;
+    }
+}
 .linkedfooter {
-    margin-left: 35px;
+    margin: 0;
+    padding: 5px;
 }
-
-
-
-
+.phone {
+    margin: 0;
+    padding: 20px
+}
+.open-hours {
+    margin: 0;
+    padding: 20px;
+}
