--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,8 @@
 font-family: 'Kaushan Script', cursive;
 }
 body {
-    max-width: 100%;
+    max-width: 990px;
+    max-height: 100%;
     margin: auto;
 }
 @media (min-width: 500px) {
@@ -40,10 +41,9 @@ header {
 .language a:hover {
     text-decoration: underline;
 }
-.logo img {
-    padding: 2px;
-    padding-left: 30px;
-    padding-right: 30px;
+.ecafelogo {
+    max-width: 100%;
+    
 }
 .slogan {
     margin: 0;
@@ -81,33 +81,58 @@ header {
         margin-left: auto;
     }
 }
-.main_content {
+main {
     background-image: url(../img/backgroundaa.jpg);
 }
 .wellcometext {
     margin: 0;
-    padding:40px;
+    padding: 30px;
     font-size: 1.8rem;
     text-align: center;
 }
 .text {
     margin: 0;
-    padding-bottom: 60px;
+    padding: 20px;
+    padding-bottom: 190px;
+    font-size: 1.8rem;
+    text-align: center;
 }
-.map {
-    margin:0;
-    padding: 10px;
-    padding-top: 0;
+.text1 {
+    margin: 0;
+    padding: 20px;
+    font-size: 1.8rem;
+    text-align: center;
+}
+.padd {
+    padding: 40px;
+}
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:42.45%;
+    position:relative;
+    height:0;
+}
+.map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
 }
 .headers {
     text-align: center;
     font-size: 2.5rem;
+    margin: 0;
+    padding: 20px;
+}
+.order_a_call {
+    
 }
 .assortment {
+    margin-bottom:  0;
     border-bottom-color: 1px solid black;
-    margin-bottom: 5px;
-    padding-bottom: 25px;
     text-align: center;
+    padding-bottom: 100px
 }
 .food {
     padding: 10px;
@@ -174,4 +199,62 @@ footer {
 .open-hours {
     margin: 0;
     padding: 20px;
+}
+.order-call {
+    padding: 50px;
+}
+/*contact form*/
+.container {
+    max-width:600px;
+    margin:0 auto;
+    text-align:center;
+    padding: 100px; 
+}
+input {
+  margin-bottom:10px;
+}
+textarea {
+  height:150px;
+  margin-bottom:10px;
+}
+input, textarea {
+  font-size: 0.8rem;
+  padding: 15px 10px 10px;
+  font-family: 'Archivo Black', sans-serif;
+  border: 2px solid #FDBB1E;
+  background: black;
+  color: #FDBB1E;
+  border-radius: 5px;
+  background-clip: padding-box;
+  width: 80%;
+  max-width: 600px;
+}
+
+button {
+  margin-top:15px;
+  margin-bottom:25px;
+  background-color:#2ABCA7;
+  padding: 12px 45px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #2ABCA7;
+  -webkit-transition: .5s;
+  transition: .5s;
+  display: inline-block;
+  cursor: pointer;
+  width:30%;
+  color:#fff;
+}
+button:hover, .button:hover {
+  background: black;
+}
+/* media queries */
+@media (max-width: 700px) {
+  input, textarea {
+    width: 90%;
+  }
+  button {
+    width:90%;
+  }
 }
